demo.pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: test
  generateName: test
spec:
  containers:
  - args:
    - bash
    - -c
    - while true; do sleep 1; done
    image: registry.access.redhat.com/ubi8/python-38:latest
    name: test
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
