mutatingAdmissionWebHook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: python-mutation-hook
  annotations:
    service.beta.openshift.io/inject-cabundle: "true"
  labels:
webhooks:
  - name: apoletics.env.tz
    clientConfig:
      service:
        name: mutate 
        namespace: mutate
        path: "/mutate"
        port: 8080
    rules:
      - operations: [ "CREATE" ]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
    sideEffects: None
    admissionReviewVersions: ["v1"]
